creo que agregue la ultima actualizacion

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <main>
 <div class="contenedor">
     <h1>AMPERADORA</h1>
+    <form>
     <label for="dispositivo">Dispositivo:</label>
     <input type="text" id="dispositivo" placeholder="Ejemplo: Heladera">
 
@@ -27,9 +28,11 @@
         <h3>Dispositivos Agregados:</h3>
         <div id="items"></div>
     </div>
+    </form>
 </div>
 
 </main>
-<script src="./js/main.js"></script>
+<script src="./js/main.js">
+</script>
 </body>
 </html>
