agregado nuevo script mensajes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         
     </main>
-
+    <script src="js/mensaje.js"></script>
     <script src="js/storage.js"></script>
 
 </body>
