--- a/pages/amperadora.html
+++ b/pages/amperadora.html
@@ -31,8 +31,14 @@
     </form>
 </div>
 
+<div id="mensajeEmergente" class="mensaje-emergente">
+    <p id="mensajeTexto">¡Este es un mensaje personalizado!</p>
+    <button id="cerrarMensaje">Cerrar</button>
+</div>
+
 </main>
-<script src="./../js/main.js">
-</script>
+
+<script src="./../js/mensaje.js"></script>
+<script src="./../js/main.js"></script>
 </body>
 </html>
