casi terminado al 100%

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             </div>
 
             <div id="bienvenida" style="display: none;">
-                <p id="mensaje"></p>
+                <p class="recupero" id="mensaje"></p>
                 <button id="continuar">Continuar con este proyecto</button>
                 <button id="nuevo">Iniciar un nuevo proyecto</button>
             </div>
         </div>
 
         <div id="mensajeEmergente" class="mensaje-emergente">
-            <p id="mensajeTexto">¡Este es un mensaje personalizado!</p>
+            <p id="mensajeTexto"></p>
             <button id="cerrarMensaje">Cerrar</button>
         </div>
         
